--- a/packages/base-map/package.json
+++ b/packages/base-map/package.json
@@ -29,8 +29,5 @@
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
-  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
-  "devDependencies": {
-    "storybook": "catalog:"
-  }
+  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
 }
