--- a/packages/core-utils/package.json
+++ b/packages/core-utils/package.json
@@ -29,7 +29,6 @@
     "tsc": "tsc"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*",
-    "storybook": "catalog:"
+    "@opentripplanner/types": "workspace:*"
   }
 }
