--- a/packages/humanize-distance/package.json
+++ b/packages/humanize-distance/package.json
@@ -14,8 +14,7 @@
     "tsc": "tsc"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*",
-    "storybook": "catalog:"
+    "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
     "react": "catalog:",
