--- a/packages/location-field/package.json
+++ b/packages/location-field/package.json
@@ -19,8 +19,7 @@
     "flat": "catalog:"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*",
-    "storybook": "catalog:"
+    "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
     "react": "catalog:",
