--- a/packages/map-popup/package.json
+++ b/packages/map-popup/package.json
@@ -18,8 +18,7 @@
     "flat": "catalog:"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*",
-    "storybook": "catalog:"
+    "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
     "react": "catalog:",
