--- a/packages/printable-itinerary/package.json
+++ b/packages/printable-itinerary/package.json
@@ -16,8 +16,7 @@
   },
   "devDependencies": {
     "@opentripplanner/icons": "workspace:*",
-    "@opentripplanner/types": "workspace:*",
-    "storybook": "catalog:"
+    "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
     "react": "catalog:",
