--- a/packages/route-viewer-overlay/package.json
+++ b/packages/route-viewer-overlay/package.json
@@ -26,8 +26,7 @@
   },
   "devDependencies": {
     "@opentripplanner/types": "workspace:*",
-    "point-in-polygon": "^1.1.0",
-    "storybook": "catalog:"
+    "point-in-polygon": "^1.1.0"
   },
   "peerDependencies": {
     "react": "catalog:"
