--- a/packages/stop-viewer-overlay/package.json
+++ b/packages/stop-viewer-overlay/package.json
@@ -23,8 +23,7 @@
     "@opentripplanner/core-utils": "workspace:*"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*",
-    "storybook": "catalog:"
+    "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
     "react": "catalog:",
