--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -25,8 +25,7 @@
   },
   "devDependencies": {
     "@opentripplanner/types": "workspace:*",
-    "@types/flat": "catalog:",
-    "storybook": "catalog:"
+    "@types/flat": "catalog:"
   },
   "peerDependencies": {
     "react": "catalog:",
