--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -27,8 +27,7 @@
   "devDependencies": {
     "@opentripplanner/types": "workspace:*",
     "@types/flat": "catalog:",
-    "lodash.clonedeep": "^4.5.0",
-    "storybook": "catalog:"
+    "lodash.clonedeep": "^4.5.0"
   },
   "peerDependencies": {
     "react": "catalog:",
