--- a/packages/zoom-based-markers/package.json
+++ b/packages/zoom-based-markers/package.json
@@ -25,8 +25,7 @@
     "lodash.clonedeep": "^4.5.0"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*",
-    "storybook": "catalog:"
+    "@opentripplanner/types": "workspace:*"
   },
   "peerDependencies": {
     "react": "catalog:",
