--- a/packages/core-utils/package.json
+++ b/packages/core-utils/package.json
@@ -5,8 +5,7 @@
   "engines": {
     "node": ">=13"
   },
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "author": "Evan Siroky",
   "license": "MIT",
@@ -30,5 +29,6 @@
   },
   "devDependencies": {
     "@opentripplanner/types": "workspace:*"
-  }
+  },
+  "type": "module"
 }
