--- a/packages/itinerary-body/package.json
+++ b/packages/itinerary-body/package.json
@@ -2,8 +2,7 @@
   "name": "@opentripplanner/itinerary-body",
   "version": "8.2.6",
   "description": "A component for displaying an itinerary body of a trip planning result",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
   "author": "Evan Siroky",
@@ -37,5 +36,6 @@
   "scripts": {
     "tsc": "tsc"
   },
-  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
+  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
+  "type": "module"
 }
