--- a/packages/building-blocks/package.json
+++ b/packages/building-blocks/package.json
@@ -5,8 +5,7 @@
   "author": "@binh-dam-ibigroup",
   "homepage": "https://github.com/opentripplanner/otp-ui/#readme",
   "license": "MIT",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "private": false,
   "devDependencies": {
     "@opentripplanner/types": "workspace:*",
@@ -31,5 +30,6 @@
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
   "dependencies": {
     "@styled-icons/bootstrap": "^10.47.0"
-  }
+  },
+  "type": "module"
 }
