--- a/packages/from-to-location-picker/package.json
+++ b/packages/from-to-location-picker/package.json
@@ -5,8 +5,7 @@
   "author": "@binh-dam-ibigroup",
   "homepage": "https://github.com/opentripplanner/otp-ui/#readme",
   "license": "MIT",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "private": false,
   "dependencies": {
     "@opentripplanner/location-icon": "workspace:*",
@@ -30,5 +29,6 @@
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
-  "gitHead": "644c72e0d08f8daf93b44eaf0deec88a1e16f414"
+  "gitHead": "644c72e0d08f8daf93b44eaf0deec88a1e16f414",
+  "type": "module"
 }
