--- a/packages/location-icon/package.json
+++ b/packages/location-icon/package.json
@@ -2,8 +2,7 @@
   "name": "@opentripplanner/location-icon",
   "version": "2.0.0",
   "description": "A component to display a location icon for either the to or from location",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "types": "lib/index.d.ts",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "author": "Evan  Siroky",
@@ -20,5 +19,6 @@
   "gitHead": "644c72e0d08f8daf93b44eaf0deec88a1e16f414",
   "scripts": {
     "tsc": "tsc"
-  }
+  },
+  "type": "module"
 }
