--- a/packages/map-popup/package.json
+++ b/packages/map-popup/package.json
@@ -2,8 +2,7 @@
   "name": "@opentripplanner/map-popup",
   "version": "8.0.1",
   "description": "A component for displaying map popup contents",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "types": "lib/index.d.js",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
@@ -30,5 +29,6 @@
   },
   "scripts": {
     "tsc": "tsc"
-  }
+  },
+  "type": "module"
 }
