--- a/packages/otp2-tile-overlay/package.json
+++ b/packages/otp2-tile-overlay/package.json
@@ -2,8 +2,7 @@
   "name": "@opentripplanner/otp2-tile-overlay",
   "version": "5.0.0",
   "description": "Render data from OTP2's vector tile server",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "types": "lib/index.d.ts",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "license": "MIT",
@@ -22,5 +21,6 @@
     "@opentripplanner/base-map": "workspace:*",
     "@opentripplanner/types": "workspace:*",
     "maplibre-gl": "catalog:"
-  }
+  },
+  "type": "module"
 }
