--- a/packages/park-and-ride-overlay/package.json
+++ b/packages/park-and-ride-overlay/package.json
@@ -2,8 +2,7 @@
   "name": "@opentripplanner/park-and-ride-overlay",
   "version": "5.0.0",
   "description": "A map overlay to show park and rides",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
   "author": "Evan Siroky",
   "license": "MIT",
@@ -28,5 +27,6 @@
     "react-dom": "catalog:",
     "react-map-gl": "catalog:",
     "styled-components": "catalog:"
-  }
+  },
+  "type": "module"
 }
