--- a/packages/transitive-overlay/package.json
+++ b/packages/transitive-overlay/package.json
@@ -2,8 +2,7 @@
   "name": "@opentripplanner/transitive-overlay",
   "version": "7.0.2",
   "description": "A map overlay to show an itinerary based on transitive.js",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "author": "Evan Siroky",
   "license": "MIT",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
@@ -39,5 +38,6 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-map-gl": "catalog:"
-  }
+  },
+  "type": "module"
 }
