--- a/packages/vehicle-rental-overlay/package.json
+++ b/packages/vehicle-rental-overlay/package.json
@@ -2,8 +2,7 @@
   "name": "@opentripplanner/vehicle-rental-overlay",
   "version": "6.0.0",
   "description": "A map overlay to show vehicle rentals from a specific company",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
+  "main": "./lib/index.js",
   "author": "Evan Siroky",
   "license": "MIT",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
@@ -36,5 +35,6 @@
     "react-intl": "catalog:",
     "react-map-gl": "catalog:",
     "styled-components": "catalog:"
-  }
+  },
+  "type": "module"
 }
