--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -2,8 +2,6 @@
   "name": "@opentripplanner/scripts",
   "version": "1.2.0",
   "description": "Utility scripts for the OTP-UI library",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
   "types": "lib/index.d.js",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
@@ -25,5 +23,12 @@
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
-  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
+  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  }
 }
