--- a/packages/trip-details/tsconfig.json
+++ b/packages/trip-details/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "composite": true,
-    "outDir": "./lib",
+    "outDir": "./dist",
     "rootDir": "./src",
     "target": "ES2019",
     "skipLibCheck": true
