--- a/babel.config.json
+++ b/babel.config.json
@@ -1,9 +1,4 @@
 {
-  "env": {
-    "esm": {
-      "presets": [["@babel/preset-env", { "modules": false }]]
-    }
-  },
   "plugins": [
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
     ["@babel/plugin-transform-private-methods", { "loose": true }],
@@ -14,7 +9,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator"
   ],
   "presets": [
-    ["@babel/preset-env", { "targets": { "node": "12" } }],
+    ["@babel/preset-env", { "targets": { "node": "12" }, "modules": false }],
     "@babel/preset-typescript",
     "@babel/preset-react"
   ]
