--- a/packages/geocoder/package.json
+++ b/packages/geocoder/package.json
@@ -2,8 +2,6 @@
   "name": "@opentripplanner/geocoder",
   "version": "3.0.6",
   "description": "Geocoding tools for multiple geocoding providers",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
   "types": "lib/index.d.ts",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "author": "Evan  Siroky",
@@ -19,5 +17,12 @@
   "gitHead": "644c72e0d08f8daf93b44eaf0deec88a1e16f414",
   "scripts": {
     "tsc": "tsc"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   }
 }
