--- a/packages/location-field/package.json
+++ b/packages/location-field/package.json
@@ -2,8 +2,6 @@
   "name": "@opentripplanner/location-field",
   "version": "4.1.2",
   "description": "A component for display and finding a location",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "author": "Evan  Siroky",
   "license": "MIT",
@@ -29,5 +27,12 @@
   "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
   "scripts": {
     "tsc": "tsc"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   }
 }
