--- a/packages/printable-itinerary/package.json
+++ b/packages/printable-itinerary/package.json
@@ -2,8 +2,6 @@
   "name": "@opentripplanner/printable-itinerary",
   "version": "4.1.1",
   "description": "A component for displaying a printable itinerary body of a trip planning result",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
   "author": "Evan Siroky",
@@ -25,5 +23,12 @@
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
-  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
+  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  }
 }
