--- a/packages/stop-viewer-overlay/package.json
+++ b/packages/stop-viewer-overlay/package.json
@@ -2,8 +2,6 @@
   "name": "@opentripplanner/stop-viewer-overlay",
   "version": "5.0.0",
   "description": "A map overlay to show a stop",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
   "author": "Evan Siroky",
   "license": "MIT",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
@@ -28,5 +26,12 @@
   "peerDependencies": {
     "react": "catalog:",
     "react-map-gl": "catalog:"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   }
 }
