--- a/packages/stops-overlay/package.json
+++ b/packages/stops-overlay/package.json
@@ -2,8 +2,6 @@
   "name": "@opentripplanner/stops-overlay",
   "version": "8.0.1",
   "description": "A map overlay to show transit stops",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
   "author": "Evan Siroky",
   "license": "MIT",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
@@ -34,5 +32,12 @@
     "react-map-gl": "catalog:",
     "styled-components": "catalog:"
   },
-  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d"
+  "gitHead": "0af1b7cda60bd4252b219dcf893e01c2acb2ed5d",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  }
 }
