--- a/packages/transit-vehicle-overlay/package.json
+++ b/packages/transit-vehicle-overlay/package.json
@@ -5,8 +5,6 @@
   "author": "Frank Purcell",
   "homepage": "https://github.com/opentripplanner/otp-ui/tree/master/packages/transit-vehicle-overlay/#readme",
   "license": "MIT",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
   "private": false,
   "dependencies": {
     "@opentripplanner/base-map": "workspace:*",
@@ -35,5 +33,12 @@
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
   },
-  "gitHead": "644c72e0d08f8daf93b44eaf0deec88a1e16f414"
+  "gitHead": "644c72e0d08f8daf93b44eaf0deec88a1e16f414",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  }
 }
