--- a/packages/trip-form/tsconfig.json
+++ b/packages/trip-form/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "lib": ["ES2019", "DOM"],
     "composite": false,
-    "outDir": "./lib",
+    "outDir": "./dist",
     "rootDir": "./src",
     "skipLibCheck": true
   },
