--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "composite": true,
-    "outDir": "./lib",
+    "outDir": "./dist",
     "rootDir": "./src"
   },
   "include": ["src/**/*"]
