--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -2,7 +2,7 @@
   "name": "@opentripplanner/scripts",
   "version": "1.2.0",
   "description": "Utility scripts for the OTP-UI library",
-  "types": "lib/index.d.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
   "author": "Binh Dam",
@@ -16,9 +16,9 @@
     "js-yaml": "^4.1.0"
   },
   "scripts": {
-    "collect-i18n": "node lib/run-collect-i18n-messages.js ../**/src ../**/i18n/en-US.yml > i18n.csv",
+    "collect-i18n": "node dist/run-collect-i18n-messages.js ../**/src ../**/i18n/en-US.yml > i18n.csv",
     "tsc": "tsc",
-    "validate-i18n": "node lib/run-validate-i18n.js ../**/src ../**/i18n"
+    "validate-i18n": "node dist/run-validate-i18n.js ../**/src ../**/i18n"
   },
   "bugs": {
     "url": "https://github.com/opentripplanner/otp-ui/issues"
