--- a/packages/geocoder/package.json
+++ b/packages/geocoder/package.json
@@ -2,7 +2,7 @@
   "name": "@opentripplanner/geocoder",
   "version": "3.0.6",
   "description": "Geocoding tools for multiple geocoding providers",
-  "types": "lib/index.d.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "author": "Evan  Siroky",
   "license": "MIT",
