--- a/packages/location-icon/package.json
+++ b/packages/location-icon/package.json
@@ -2,7 +2,7 @@
   "name": "@opentripplanner/location-icon",
   "version": "2.0.0",
   "description": "A component to display a location icon for either the to or from location",
-  "types": "lib/index.d.ts",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "author": "Evan  Siroky",
   "license": "MIT",
