--- a/packages/map-popup/package.json
+++ b/packages/map-popup/package.json
@@ -2,7 +2,7 @@
   "name": "@opentripplanner/map-popup",
   "version": "8.0.1",
   "description": "A component for displaying map popup contents",
-  "types": "lib/index.d.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/opentripplanner/otp-ui.git",
   "homepage": "https://github.com/opentripplanner/otp-ui#readme",
   "author": "Evan Siroky",
