--- a/packages/trip-form/package.json
+++ b/packages/trip-form/package.json
@@ -5,7 +5,7 @@
   "author": "@binh-dam-ibigroup",
   "homepage": "https://github.com/opentripplanner/otp-ui/#readme",
   "license": "MIT",
-  "types": "lib/index.d.ts",
+  "types": "dist/index.d.ts",
   "private": false,
   "dependencies": {
     "@opentripplanner/building-blocks": "workspace:*",
