--- a/packages/core-utils/package.json
+++ b/packages/core-utils/package.json
@@ -16,7 +16,7 @@
     "@mapbox/polyline": "catalog:",
     "@opentripplanner/geocoder": "workspace:*",
     "@styled-icons/foundation": "catalog:",
-    "@turf/along": "^6.0.1",
+    "@turf/along": "^7.3.1",
     "chroma-js": "^2.4.2",
     "date-fns": "catalog:",
     "date-fns-tz": "catalog:",
@@ -29,6 +29,7 @@
     "tsc": "tsc"
   },
   "devDependencies": {
-    "@opentripplanner/types": "workspace:*"
+    "@opentripplanner/types": "workspace:*",
+    "@types/mapbox__polyline": "^1.0.5"
   }
 }
