feat(transitive-overlay): Import building-blocks and use standardized color variables

--- a/packages/transitive-overlay/package.json
+++ b/packages/transitive-overlay/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@mapbox/polyline": "catalog:",
     "@opentripplanner/base-map": "workspace:*",
+    "@opentripplanner/building-blocks": "workspace:*",
     "@opentripplanner/core-utils": "workspace:*",
     "@opentripplanner/itinerary-body": "workspace:*",
     "@turf/bbox": "^6.5.0",
